<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageSouvenir"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/tvNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/nama_souvenir"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:drawablePadding="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/alamat_lokasi"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/tvOpen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:drawablePadding="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/jam_buka_dan_tutup"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:drawableStartCompat="@drawable/ic_baseline_access_time_24" />
            <TextView
                android:id="@+id/tvTelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:drawablePadding="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/nomor_telepon"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:drawableStartCompat="@drawable/ic_baseline_phone_24" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>