<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageSouvenir"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/nama_souvenir"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPetunjuk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/petunjuk_arah"
            android:textAllCaps="false"
            app:cornerRadius="16dp"
            app:elevation="8dp"
            app:layout_constraintEnd_toEndOf="@+id/cardAdrress"
            app:layout_constraintStart_toStartOf="@+id/cardAdrress"
            app:layout_constraintTop_toBottomOf="@+id/cardTelp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardAdrress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageSouvenir"
            app:layout_constraintStart_toStartOf="@+id/imageSouvenir"
            app:layout_constraintTop_toBottomOf="@+id/tvNama"
            app:layout_constraintVertical_bias="0.20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat_lokasi"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tvAlamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/alamat_lokasi"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardOpenClosed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="@+id/imageSouvenir"
            app:layout_constraintStart_toStartOf="@+id/imageSouvenir"
            app:layout_constraintTop_toBottomOf="@+id/cardAdrress">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jam_buka_dan_tutup"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tvOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/jam_buka_dan_tutup"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardTelp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="@+id/imageSouvenir"
            app:layout_constraintStart_toStartOf="@+id/imageSouvenir"
            app:layout_constraintTop_toBottomOf="@+id/cardOpenClosed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nomor_telepon"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tvTelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/nomor_telepon"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="31dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardAdrress"
            app:layout_constraintStart_toStartOf="@+id/cardAdrress"
            app:layout_constraintTop_toBottomOf="@+id/btnPetunjuk">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi_oleh_oleh"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tvDekripsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/deskripsi_oleh_oleh"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>